style.css
@import url("https://fonts.googleapis.com/css2?family=Akronim&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Akronim&family=Playfair:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Akronim&family=New+Rocker&family=Playfair:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Playfair:wght@300&display=swap");
@import url('https://fonts.googleapis.com/css2?family=Akronim&family=Nerko+One&family=New+Rocker&family=Pathway+Gothic+One&family=Playfair:wght@300&display=swap');

html,
body {
  background-color: rgb(0, 0, 0);
  margin: 0;
  background-color: black;
}

nav {
  background-color: black;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  top:0;
  position: sticky;
  z-index: 3;
}

.a-tag{
  text-decoration: none;
  height: fit-content;
}

/* Initial styles for the logo */
#logo {
  width: 200px;
  /* height: auto; */
  height: 114px;
  transition: width 0.3s ease-in-out; /* Add a transition effect */
}

/* Styles for the smaller logo */
/* #logo.shrink {
  width: 100px;
} */

.page-links {
  display: flex;
  justify-content: space-around;
  gap: 30px;
  margin-top: 60px;
  margin-right: 60px;
  color: white;
}

li {
  color: white;
  list-style: none;
  font-size: 21px;
  cursor: pointer;
  transition: color 200ms;
}

li:hover {
  color: rgb(168, 0, 0);
}

span {
  font-size: 21px;
}

figure {
  margin: 0;
  width: 100%;
  height: 400px;
  background-image: url("images/dish1.jpg");
  background-size: cover;
  background-position: center;
}

.ol{
color: black;
}

.dish1 {
  margin: 0;
  width: 100%;
  height: 100%;
}

main {
  background-image: url("images/chopsticks.jpg");
  background-position: center;
  background-size: cover;
  padding: 25px;
  display: flex;
  justify-content: space-around;
  background-color: black;
  flex-wrap: wrap;
  gap: 20px;
}



.business-hours {
  display: flex;
  flex-direction: column;
  width: min-content;
  gap: 10px;
  background-color: rgba(255, 255, 255, 0.774);
  color: rgb(0, 0, 0);
  padding: 10px;
  border-radius: 10px;
  width: 300px;
  font-family: "New Rocker", cursive;

}

.category{
  text-align: center;
  text-decoration: underline;
}

.container{
  display: flex;
  justify-content: space-between;
}

.day {
  font-weight: bold;
}

.hours {
  color: #000000;
}

.c-image {
  height: 400px;
  object-fit:cover;
}

.over-lay {
  font-family: "New Rocker", cursive;
  font-weight: 100;
  position: absolute;
  background-color: rgba(0, 0, 0, 0.437);
  color: rgb(255, 255, 255);
  width: 100%;
}

.copy-right{
  color: rgb(255, 255, 255);
  text-align: center;
  background-color: rgb(0, 0, 0);
}

.map{
  border-radius: 10px;
}




footer{
/* height: 100%; */
}


.yelp{
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  margin-right: 150px;
  font-size: 26px;
  color: rgb(106, 149, 235);
  transition: color 300ms;
}

.phone-color{
  color: rgb(30, 193, 98);
  transition: color 300ms;
  width: min-content;
  height: max-content;
}

.facebook {
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  margin-right: 60px;
  font-size: 26px;
  color: rgb(106, 149, 235);
  transition: color 300ms;
}

.instagram {
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  margin-right: 110px;
  font-size: 26px;
  color: rgb(255, 0, 144);
  transition: color 300ms;
}

.instagram2{
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  /* margin-right: 110px; */
  font-size: 26px;
  color: rgb(30, 193, 98);
  transition: color 300ms;
}

/* .phone{
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  margin-right: 110px;
  font-size: 26px;
  color: rgb(255, 0, 144);
  transition: color 300ms;
} */

/* .yelp {
  position: fixed;
  bottom: 0;
  right: 0;
  margin: 12px;
  margin-right: 150px;
  font-size: 26px;
  color: rgb(234, 16, 0);
  transition: color 300ms;
  cursor: pointer;
  width: min-content;
  height: max-content;
} */

/* .yelp-color{
  color: rgb(234, 16, 0);
  transition: color 300ms;
  width: min-content;

} */

.phone-color:hover, .facebook:hover, .instagram:hover, .yelp-color:hover{
  color: rgb(177, 0, 0);
}



@media screen and (max-width: 700px) {

  nav{
    justify-content: center;
  }

  .page-links{
    margin-top: 0;
    margin-right: 10px;
    margin-left: -15px;
  }
}
.carousel-caption {
  font-size: 24px;
}


@media (max-width: 768px) {
  .carousel-caption {
    font-size: 16px !important;
  }
  .quote{
    font-size: 16px !important;
  }
  .name{
    font-size: 18px;
  }
}


@media (max-width: 538px) {

  
  .facebook {
    position: fixed;
    top: 0;
    right: 0;
    margin: 12px;
    margin-top: 60px;
    margin-right: 10px;
    font-size: 26px;
    color: rgb(106, 149, 235);
    z-index: 6;
    
  }

  .yelp {
    position: fixed;
    top: 0;
    left: 0;
    margin: 12px;
    margin-top: 60px;
    margin-left: 10px;
    font-size: 26px;
    color: rgb(106, 149, 235);
    z-index: 6;
    width: min-content;
    height: min-content;
  }
  
  .instagram {
    position: fixed;
    top: 0;
    right: 0;
    margin-right: 10px;
    font-size: 26px;
    color: rgb(255, 152, 210);
    z-index: 4;
  }

  .instagram2{
    position: fixed;
    top: 0;
    left: 0;
    margin-left: 10px;
    font-size: 26px;
    color: rgb(30, 193, 98);
    z-index: 4;
    /* width: min-content;
    height: min-content;  */
    width: 36px;
    height: 36px;
  }
}


/* --------------Menu Page------------------- */

.food-items{
  display: flex;
  justify-content: center;
  gap: 20px;
  /* background-color: rgb(43, 43, 43); */
  /* background: linear-gradient(to bottom, #333, #333 50%, #eee 75%, #333 75%); */
  
  /* background: linear-gradient( #000000, white, black, #880000); */
  /* background: linear-gradient( white, black, white); */
  flex-wrap: wrap;
  /* border: solid black 5px; */
  padding: 20px;
}

.bla{
  /* position: absolute; */
  /* z-index: 3; */
  width: 300px;
  height: 200px;
  margin-top: 70px;
  cursor: pointer;
  border: solid 1px rgb(0, 0, 0);
  transition: border 250ms;
}

.bla:hover{
  border: solid 1px white;
}

.h2-ramen{
  border-bottom: black solid;
}


.food-items-ramen{
  display: flex;
  justify-content: center;
  gap: 30px;
  /* background-image: url('https://images.unsplash.com/photo-1588001291548-948f55922bfd?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTJ8fHJhbWVufGVufDB8MHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60'); */
  background-color: rgb(255, 255, 255);
  background-position: center;
  background-size: cover;
  /* background-color: rgb(43, 43, 43); */
  /* background: linear-gradient(to bottom, #333, #333 50%, #eee 75%, #333 75%); */
  /* background: linear-gradient( #000000, white, black, #880000); */
  flex-wrap: wrap;
  /* border: solid black 5px; */
  padding: 20px;
  background: linear-gradient( white, black, white);

}

